fix production flow 25-11-12