@@ -4,47 +4,58 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.validation.annotation.Validated;
 import tmmsystem.entity.*;
 import tmmsystem.dto.production.ProductionStageDto;
+import tmmsystem.dto.execution.StageTrackingDto;
 import tmmsystem.mapper.ProductionMapper;
+import tmmsystem.mapper.ExecutionMapper;
 import tmmsystem.service.ExecutionOrchestrationService;
+import tmmsystem.service.ExecutionService;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/v1/execution")
 @Validated
 public class ExecutionController {
-    private final ExecutionOrchestrationService service;
-    private final ProductionMapper mapper;
+    private final ExecutionOrchestrationService orchestrationService;
+    private final ProductionMapper productionMapper;
+    private final ExecutionService executionService;
+    private final ExecutionMapper executionMapper;
 
-    public ExecutionController(ExecutionOrchestrationService service, ProductionMapper mapper) {
-        this.service = service;
-        this.mapper = mapper;
+    public ExecutionController(ExecutionOrchestrationService service,
+                               ProductionMapper productionMapper,
+                               ExecutionService executionService,
+                               ExecutionMapper executionMapper) {
+        this.orchestrationService = service;
+        this.productionMapper = productionMapper;
+        this.executionService = executionService;
+        this.executionMapper = executionMapper;
     }
 
     @PostMapping("/orders/{orderId}/start")
     public ProductionOrder startOrder(@PathVariable Long orderId, @RequestParam Long pmUserId) {
-        return service.startProductionOrder(orderId, pmUserId);
+        return orchestrationService.startProductionOrder(orderId, pmUserId);
     }
 
     @PostMapping("/stages/{stageId}/start")
     public ProductionStageDto startStage(@PathVariable Long stageId, @RequestParam Long userId) {
-        ProductionStage stage = service.startStage(stageId, userId);
-        return mapper.toDto(stage);
+        ProductionStage stage = orchestrationService.startStage(stageId, userId);
+        return productionMapper.toDto(stage);
     }
 
     @PutMapping("/stages/{stageId}/progress")
     public ProductionStageDto updateProgress(@PathVariable Long stageId, @RequestParam Long userId,
             @RequestParam Integer percent) {
-        ProductionStage stage = service.updateProgress(stageId, userId, percent);
-        return mapper.toDto(stage);
+        ProductionStage stage = orchestrationService.updateProgress(stageId, userId, percent);
+        return productionMapper.toDto(stage);
     }
 
     @PostMapping("/stages/{stageId}/qc/start")
     public QcSession startQc(@PathVariable Long stageId, @RequestParam Long qcUserId) {
-        return service.startQcSession(stageId, qcUserId);
+        return orchestrationService.startQcSession(stageId, qcUserId);
     }
 
     @GetMapping("/stages/{stageId}/checkpoints")
     public java.util.List<QcCheckpoint> getStageCheckpoints(@PathVariable Long stageId) {
-        return service.getCheckpointsForStage(stageId);
+        return orchestrationService.getCheckpointsForStage(stageId);
     }
 
     @PostMapping("/qc-sessions/{sessionId}/submit")
@@ -53,62 +64,77 @@ public class ExecutionController {
             @RequestParam(required = false) String defectLevel,
             @RequestParam(required = false) String defectDescription,
             @RequestBody(required = false) java.util.List<tmmsystem.dto.qc.QcInspectionDto> criteriaResults) {
-        return service.submitQcSession(sessionId, result, notes, qcUserId, defectLevel, defectDescription,
+        return orchestrationService.submitQcSession(sessionId, result, notes, qcUserId, defectLevel, defectDescription,
                 criteriaResults);
     }
 
     @PostMapping("/issues/{issueId}/rework-request")
     public ProductionStageDto requestRework(@PathVariable Long issueId, @RequestParam Long techUserId) {
-        ProductionStage stage = service.requestRework(issueId, techUserId);
-        return mapper.toDto(stage);
+        ProductionStage stage = orchestrationService.requestRework(issueId, techUserId);
+        return productionMapper.toDto(stage);
     }
 
     @PostMapping("/stages/{stageId}/rework/start")
     public ProductionStageDto startRework(@PathVariable Long stageId, @RequestParam Long leaderUserId) {
-        ProductionStage stage = service.startRework(stageId, leaderUserId);
-        return mapper.toDto(stage);
+        ProductionStage stage = orchestrationService.startRework(stageId, leaderUserId);
+        return productionMapper.toDto(stage);
     }
 
     @PostMapping("/issues/{issueId}/material-request")
     public tmmsystem.entity.MaterialRequisition createMaterialRequest(@PathVariable Long issueId,
             @RequestParam Long techUserId, @RequestParam(required = false) String notes) {
-        return service.createMaterialRequest(issueId, techUserId, notes);
+        return orchestrationService.createMaterialRequest(issueId, techUserId, notes);
     }
 
     @PostMapping("/material-requisitions/{reqId}/approve")
     public tmmsystem.entity.MaterialRequisition approveMaterialRequest(@PathVariable Long reqId,
             @RequestParam Long pmUserId) {
-        return service.approveMaterialRequest(reqId, pmUserId);
+        return orchestrationService.approveMaterialRequest(reqId, pmUserId);
     }
 
     @GetMapping("/leader/stages")
     public java.util.List<ProductionStageDto> leaderStages(@RequestParam Long leaderUserId) {
-        return service.listStagesForLeader(leaderUserId).stream().map(mapper::toDto).toList();
+        return orchestrationService.listStagesForLeader(leaderUserId).stream()
+                .map(productionMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/qc/stages")
     public java.util.List<ProductionStageDto> qcStages(@RequestParam Long qcUserId) {
-        return service.listStagesForQc(qcUserId).stream().map(mapper::toDto).toList();
+        return orchestrationService.listStagesForQc(qcUserId).stream()
+                .map(productionMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/technical/stages")
     public java.util.List<ProductionStageDto> technicalStages() {
-        return service.listStagesForTechnical().stream().map(mapper::toDto).toList();
+        return orchestrationService.listStagesForTechnical().stream()
+                .map(productionMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/pm/orders/{orderId}/stages")
     public java.util.List<ProductionStageDto> pmStages(@PathVariable Long orderId) {
-        return service.listStagesForPm(orderId).stream().map(mapper::toDto).toList();
+        return orchestrationService.listStagesForPm(orderId).stream()
+                .map(productionMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    @GetMapping("/stages/{stageId}/trackings")
+    public java.util.List<StageTrackingDto> getStageTrackings(@PathVariable Long stageId) {
+        return executionService.findTrackings(stageId).stream()
+                .map(executionMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/material-requisitions")
     public java.util.List<tmmsystem.entity.MaterialRequisition> listMaterialRequisitions(
             @RequestParam(required = false) String status) {
-        return service.listMaterialRequisitions(status);
+        return orchestrationService.listMaterialRequisitions(status);
     }
 
     @GetMapping("/material-requisitions/{reqId}")
     public tmmsystem.entity.MaterialRequisition getMaterialRequisition(@PathVariable Long reqId) {
-        return service.getMaterialRequisition(reqId);
+        return orchestrationService.getMaterialRequisition(reqId);
     }
 }
